--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-html,
-body,
-#root {
-  height: 101vh;
-}
 * {
   -ms-overflow-style: none;
 }
@@ -10,7 +5,7 @@ body,
   display: none;
 }
 #root {
-  background-color: #01040c;
+  background-color: #0b0300;
 }
 
 body {
