--- a/src/components/VenusComponent/VenusDescr.module.css
+++ b/src/components/VenusComponent/VenusDescr.module.css
@@ -1,7 +1,7 @@
 .EarthDescrCont {
   color: white;
   position: absolute;
-  top: 10%;
+  top: 15%;
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
@@ -29,21 +29,26 @@
 .btnNavigation {
   outline: none;
   border: none;
-  background-color: #353738;
-  color: #fff;
-  font-size: 16px;
+  background-color: rgb(255, 201, 121);
+  color: #000000;
+  font-size: 20px;
   font-weight: 700;
-  border-radius: 8px;
+  border-radius: 50px;
   width: 200px;
   height: 40px;
   cursor: pointer;
   border: 2px solid transparent;
   transition: all 350ms ease-in-out;
   z-index: 199;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 .btnNavigation:hover {
   background-color: transparent;
-  border: 2px solid #353738;
+  border: 2px solid rgb(255, 201, 121);
+  color: rgb(255, 201, 121);
 }
 @media screen and (max-width: 767px) {
   .EarthDescrTitle {
