--- a/src/pages/Mars/Mars.module.css
+++ b/src/pages/Mars/Mars.module.css
@@ -16,7 +16,7 @@
   height: 200vh;
   top: 0;
   left: 0;
-  background-color: rgba(12, 12, 12, 0.09);
+  background-color: rgba(1, 1, 192, 0.09);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,6 +27,12 @@
 }
 .inspectionLarge {
   height: 200vh;
+}
+.btnCont {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 300;
 }
 .btnDes {
   position: absolute;
