--- a/src/pages/Earth/Earth.module.css
+++ b/src/pages/Earth/Earth.module.css
@@ -1,11 +1,3 @@
-.btnCont {
-  color: #fff;
-  position: fixed;
-  top: 5px;
-  left: 20px;
-  z-index: 300;
-}
-
 .canvasCont {
   height: 100%;
 }
@@ -16,11 +8,11 @@
   height: 200vh;
   top: 0;
   left: 0;
-  background-color: rgba(1, 1, 192, 0.09);
+  background-color: rgba(1, 1, 192, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 99;
+  z-index: 100;
 }
 .inspectionSmall {
   height: 100vh;
@@ -83,12 +75,6 @@
   color: #0270ff;
 }
 
-.btnCont {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 300;
-}
 .btnLook {
   position: absolute;
   outline: none;
@@ -104,7 +90,6 @@
   cursor: pointer;
   border: 2px solid transparent;
   transition: all 500ms linear;
-  z-index: 199;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -130,7 +115,6 @@
   cursor: pointer;
   border: 2px solid transparent;
   transition: all 500ms linear;
-  z-index: 199;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -141,12 +125,36 @@
   border: 2px solid rgb(255, 201, 121);
   color: rgb(255, 201, 121);
 }
+.btnCont {
+  color: #fff;
+  position: fixed;
+  cursor: pointer;
+  top: 20px;
+  left: 20px;
+  z-index: 301;
+}
+.btnGit {
+  position: absolute;
+  color: #fff;
+  transition: color 300ms ease-out;
+  cursor: pointer;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 300;
+}
+.btnGit:hover {
+  color: rgb(255, 201, 121);
+}
+.gitIcon {
+  width: 30px;
+  height: 30px;
+}
 @media screen and (max-width: 424px) {
   .btnCont {
     position: fixed;
     top: 10px;
     left: 10px;
-    z-index: 300;
   }
   .btnLook {
     font-size: 14px;
