--- a/src/components/ModalNav/ModalNav.module.css
+++ b/src/components/ModalNav/ModalNav.module.css
@@ -18,12 +18,25 @@
   transform: translate(-50%, -50%) scale(1);
   width: 70%;
   height: 75%;
-  border-radius: 4px;
+  border-radius: 20px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 999;
+  background-image: url(../../assets/modalBackG/46497.png);
+  background-size: cover;
+  background-position: center;
+}
+.modalContainerWindow::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 20px;
 }
 .modalContainerListAndBtn {
   width: 100%;
@@ -33,15 +46,130 @@
   box-sizing: border-box;
 }
 .btnCloseModal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  border: none;
   position: absolute;
   top: 20px;
   right: 20px;
+  background-color: rgb(255, 201, 121);
+  transition: all 350ms ease-in-out;
+  outline: none;
+}
+.btnCloseModal:hover {
+  background-color: transparent;
+  border: 1px solid rgb(255, 201, 121);
+  color: rgb(255, 201, 121);
+}
+.btnCloseModalIcon {
+  width: 23px;
+  height: 23px;
 }
 .modalList {
+  color: #fff;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  font-size: 24px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  flex-wrap: wrap;
+  row-gap: 8px;
+}
+
+.modalListItem {
+  box-sizing: content-box;
+
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transition: all 350ms ease-in-out;
+}
+.modalListItem:hover {
+  color: rgb(255, 201, 121);
+}
+.modalRingSun {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(255, 223, 0);
+}
+.modalRingMerc {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(169, 169, 169);
+}
+.modalRingVen {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(227, 196, 150);
+}
+.modalRingEarth {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(0, 105, 148);
+}
+.modalRingMars {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(210, 105, 30);
+}
+.modalRingJup {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(216, 169, 127);
+}
+.modalRingSat {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(210, 180, 140);
+}
+.modalRingUran {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(173, 216, 230);
+}
+.modalRingNept {
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  background-color: rgb(0, 0, 128);
+}
+@media screen and (max-width: 424px) {
+  .modalList {
+    font-size: 18px;
+  }
+  .btnCloseModal {
+    width: 25px;
+    height: 25px;
+  }
+  .btnCloseModalIcon {
+    width: 23px;
+    height: 23px;
+  }
 }
