--- a/src/components/VenusComponent/VenusDescr.module.css
+++ b/src/components/VenusComponent/VenusDescr.module.css
@@ -1,12 +1,15 @@
 .EarthDescrCont {
   color: white;
   position: absolute;
-  top: 15%;
-  padding-left: 20px;
-  padding-right: 20px;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 90vw;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 101;
 }
 .EarthDescrTitle {
   font-weight: 900;
